@@ -1,0 +1,13 @@
+------------0xKhTmLbOuNdArY
+Content-ID: <asdfg@asdfg.com>
+
+<model><data1>asdfg</data1><data2>asdfg</data2></model>
+------------0xKhTmLbOuNdArY
+Content-ID: <qwert@qwerty.com>
+
+Attachment file 1
+------------0xKhTmLbOuNdArY
+Content-ID: <zxcvb@zxcvb.com>
+
+Attachment file 2
+------------0xKhTmLbOuNdArY--
